--- a/public/index.html
+++ b/public/index.html
@@ -31,7 +31,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
     <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.css" />
 
-    <title>React App</title>
+    <title>Cortex</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
