--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Cortex CloudScript integrated IDE for macros developers"
+      content="Cortex CloudScript integrated solution as a framework and IDE for macros developers"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
