--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Cortex CloudScript integrated solution as a framework and IDE for macros developers"
+      content="Rocket. Cortex API, CloudScript integrated solution as a framework and IDE for macros development"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -31,7 +31,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
     <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.css" />
 
-    <title>Cortex</title>
+    <title>Rocket</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
